tools/fixtures/should_fail/missing_wait.x3s
* while loop without wait should fail
while 1
end
